Cinema Food Court

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Pacifico&amp;display=swap"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
